# geodjango-starter

./: README.md  pyproject.toml
app/api/: admin.py  load_lines.py  load_points.py  load_polygons.py  models.py  serializers.py  views.py
app/config/: settings.py  urls.py
app/db/: README.md
app/db/geojson/: line_osm.geojson  point_osm.geojson  polygon_osm.geojson
